# erp-api

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml
apps/http-api/: Cargo.toml
apps/http-api/src/: config.rs  main.rs
apps/http-server/: Cargo.toml
apps/http-server/src/: app_state.rs  config.rs  lib.rs  main.rs
apps/http-server/src/dto/: mod.rs  organization.rs  party.rs
apps/http-server/src/handlers/: organization.rs  party.rs
apps/http-server/src/routes/: mod.rs  organization.rs  party.rs
apps/http-server/tests/: organization_api_test.rs  party_api_test.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/organization/: create_organization.rs  get_organization.rs  list_organizations.rs
crates/application/src/party/: create_party.rs  get_party.rs  list_parties.rs
crates/application/src/ports/: organization_repository.rs  party_repository.rs
crates/application/tests/: organization_usecases_test.rs  party_usecases_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/organization/: entity.rs  value_objects.rs
crates/domain/src/party/: entity.rs  value_objects.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/persistence/entity/: contact.rs  mod.rs  organization.rs  organization_contact.rs  prelude.rs
crates/infrastructure/src/repositories/: organization_repository.rs  party_repository.rs
crates/infrastructure/tests/: organization_repository_test.rs  party_repository_test.rs
crates/infrastructure/tests/common/: fixtures.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  pagination.rs  response.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251112_091615_create_organization_table.rs  m20251112_091616_create_contact_table.rs  m20251112_091617_create_organization_contact_table.rs
migrations/: 20251112091615_create_organization_table.down.sql  20251112091615_create_organization_table.up.sql  20251112091616_create_contact_table.down.sql  20251112091616_create_contact_table.up.sql  20251112091617_create_organization_contact_table.down.sql  20251112091617_create_organization_contact_table.up.sql  20251208091615_create_party_table.down.sql  20251208091615_create_party_table.up.sql
scripts/: test-infrastructure.sh
shared/: Cargo.toml
shared/src/: error.rs  response.rs
