[workspace]
resolver = "2"
members = ["apps/http-api", "shared"]

[workspace.dependencies]
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }

# --- Async & Runtime ---
# --- Web Framework & HTTP ---
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# --- Tracing & Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Utilities ---
dotenvy = "0.15"
thiserror = "2.0.17"
serde = "1.0.228"
serde_json = "1.0.145"
uuid = "1.18.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"

#Database
sea-orm = { version = "2.0.0-rc.7", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-rust_decimal",
  "with-uuid",
] }

# --- OpenAPI ---
utoipa = { version = "5.4.0" }
