[workspace]
resolver = "2"
members = ["apps/*", "crates/*", "migration"]

[workspace.dependencies]
# --- Async & Runtime ---
tokio = { version = "1.47.1", features = ["full"] }

# --- Web Framework & HTTP ---
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# --- Tracing & Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Utilities ---
dotenvy = "0.15"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
async-trait = "0.1.89"
rust_decimal = { version = "1.36", features = ["serde"] }
bon = "3.8.1"
derive_more = { version = "2.0.1", features = ["full"] }

#Database
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-rust_decimal",
  "with-uuid",
] }

utoipa = { version = "5.4.0", features = [
  "macros",
  "axum_extras",
  "debug",
  "chrono",
  "uuid",
  "decimal",
] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipauto = { version = "0.2.0" }
