[package]
name = "http-server"
version = "0.1.0"
edition = "2024"
default-run = "http-server"

[dependencies]
shared = { path = "../../crates/shared" }
domain = { path = "../../crates/domain" }
application = { path = "../../crates/application" }
infrastructure = { path = "../../crates/infrastructure" }

async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
utoipauto = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
