[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }

uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
fake = { version = "4.4", features = ["derive", "uuid", "chrono"] }
infrastructure = { path = "../infrastructure" }
sqlx = { workspace = true }
rstest = "0.24"
