[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bon = { workspace = true }
derive_more = { workspace = true }
utoipa = { workspace = true }
